--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>The Power of Stillness, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">17 minutes ago</div>
+                        <div class="date">43 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Vikkstar’s COLDEST Moment 🥶</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">33 minutes ago</div>
+                        <div class="date">59 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Is Sadhguru Against Inter Caste Marriage?</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">42 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 22.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">53 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Why Day Traders Fail</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Nothing to Attain</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 21.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN GOLF BUT EVERY HOLE GETS HARDER</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Teaching   a Subscriber  Pizza techniques</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -343,7 +343,7 @@
                     <div class="video-info">
                         <h3>Sadhguru's Powerful Message for Volunteers on Diwali</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -805,7 +805,7 @@
                     <div class="video-info">
                         <h3>tip 12: tomato sauce spilled on the pizza</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1432,7 +1432,7 @@
                     <div class="video-info">
                         <h3>Go BIG or Go HOME! Increasing the Risk in my Live Trading Account</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 22.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">53 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>Why Day Traders Fail</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5127,7 +5127,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 21.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5644,7 +5644,7 @@
                         <div class="video-info">
                             <h3>Go BIG or Go HOME! Increasing the Risk in my Live Trading Account</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>The Power of Stillness, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">17 minutes ago</div>
+                            <div class="date">43 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Is Sadhguru Against Inter Caste Marriage?</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">42 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Nothing to Attain</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7326,7 +7326,7 @@
                         <div class="video-info">
                             <h3>Sadhguru's Powerful Message for Volunteers on Diwali</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>Teaching   a Subscriber  Pizza techniques</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8790,7 +8790,7 @@
                         <div class="video-info">
                             <h3>tip 12: tomato sauce spilled on the pizza</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>Vikkstar’s COLDEST Moment 🥶</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">33 minutes ago</div>
+                            <div class="date">59 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -9583,7 +9583,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN GOLF BUT EVERY HOLE GETS HARDER</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
