--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>The Power of Stillness, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">43 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Vikkstar’s COLDEST Moment 🥶</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">59 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Best Trading Strategy: Market Analysis & Robustness! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>The number 1 problem with Day Trading strategies...</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Equanimity, Balance & Exuberance | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -383,9 +383,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/shorts/cQb4s8rSXik" target="_blank">
-                    <img src="https://i.ytimg.com/vi/cQb4s8rSXik/mqdefault.jpg" alt="His COLDEST Moment 🥶">
+                    <img src="https://i.ytimg.com/vi/cQb4s8rSXik/mqdefault.jpg" alt="Simon’s COLDEST Moment 🥶">
                     <div class="video-info">
-                        <h3>His COLDEST Moment 🥶</h3>
+                        <h3>Simon’s COLDEST Moment 🥶</h3>
                         <div class="channel">MoreSidemen</div>
                         <div class="date">2 days ago</div>
                     </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Best Trading Strategy: Market Analysis & Robustness! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5116,7 +5116,7 @@
                         <div class="video-info">
                             <h3>The number 1 problem with Day Trading strategies...</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>The Power of Stillness, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">43 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Equanimity, Balance & Exuberance | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>Vikkstar’s COLDEST Moment 🥶</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">59 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9590,9 +9590,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/shorts/cQb4s8rSXik" target="_blank">
-                        <img src="https://i.ytimg.com/vi/cQb4s8rSXik/mqdefault.jpg" alt="His COLDEST Moment 🥶">
+                        <img src="https://i.ytimg.com/vi/cQb4s8rSXik/mqdefault.jpg" alt="Simon’s COLDEST Moment 🥶">
                         <div class="video-info">
-                            <h3>His COLDEST Moment 🥶</h3>
+                            <h3>Simon’s COLDEST Moment 🥶</h3>
                             <div class="channel">MoreSidemen</div>
                             <div class="date">2 days ago</div>
                         </div>
