--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>The Power of Stillness, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Best Trading Strategy: Market Analysis & Robustness! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>The number 1 problem with Day Trading strategies...</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -783,7 +783,7 @@
                     <div class="video-info">
                         <h3>Bollinger Bands: The BEST Strategy for Long-Term Gains? #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2327,7 +2327,7 @@
                     <div class="video-info">
                         <h3>Master Pro Level Ball Striking In 15 Minutes, Not 15 Years</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 22, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Best Trading Strategy: Market Analysis & Robustness! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5116,7 +5116,7 @@
                         <div class="video-info">
                             <h3>The number 1 problem with Day Trading strategies...</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5325,7 +5325,7 @@
                         <div class="video-info">
                             <h3>Bollinger Bands: The BEST Strategy for Long-Term Gains? #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>The Power of Stillness, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9478,7 +9478,7 @@
                         <div class="video-info">
                             <h3>Master Pro Level Ball Striking In 15 Minutes, Not 15 Years</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 22, 2025</div>
                         </div>
                     </a>
                 </div>
