--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Levels of Working with Your Energy</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">10 minutes ago</div>
+                        <div class="date">28 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>25 Years of Trading Psychology in Under a Minute 🧠</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">11 minutes ago</div>
+                        <div class="date">29 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Sadhguru's Message on Deepfakes & Cybercrime</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">22 minutes ago</div>
+                        <div class="date">39 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Vikkstar’s COLDEST Moment 🥶</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Equanimity, Balance & Exuberance | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -383,9 +383,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=81ZPu4II1nQ" target="_blank">
-                    <img src="https://i.ytimg.com/vi/81ZPu4II1nQ/mqdefault.jpg" alt="Don't Keep Your Spine Angle in the Golf Swing - It's Killing Your Ball Striking!">
+                    <img src="https://i.ytimg.com/vi/81ZPu4II1nQ/mqdefault.jpg" alt="The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth">
                     <div class="video-info">
-                        <h3>Don't Keep Your Spine Angle in the Golf Swing - It's Killing Your Ball Striking!</h3>
+                        <h3>The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth</h3>
                         <div class="channel">SagutoGolf</div>
                         <div class="date">2 days ago</div>
                     </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>25 Years of Trading Psychology in Under a Minute 🧠</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">11 minutes ago</div>
+                            <div class="date">29 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Levels of Working with Your Energy</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">10 minutes ago</div>
+                            <div class="date">28 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Sadhguru's Message on Deepfakes & Cybercrime</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">22 minutes ago</div>
+                            <div class="date">39 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7293,7 +7293,7 @@
                         <div class="video-info">
                             <h3>Equanimity, Balance & Exuberance | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -9397,9 +9397,9 @@
         
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=81ZPu4II1nQ" target="_blank">
-                        <img src="https://i.ytimg.com/vi/81ZPu4II1nQ/mqdefault.jpg" alt="Don't Keep Your Spine Angle in the Golf Swing - It's Killing Your Ball Striking!">
+                        <img src="https://i.ytimg.com/vi/81ZPu4II1nQ/mqdefault.jpg" alt="The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth">
                         <div class="video-info">
-                            <h3>Don't Keep Your Spine Angle in the Golf Swing - It's Killing Your Ball Striking!</h3>
+                            <h3>The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth</h3>
                             <div class="channel">SagutoGolf</div>
                             <div class="date">2 days ago</div>
                         </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>Vikkstar’s COLDEST Moment 🥶</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
