--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>A Simple Momentum Trading Strategy (Backed By Data)</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">26 minutes ago</div>
+                        <div class="date">33 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>The Power of Stillness, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2327,7 +2327,7 @@
                     <div class="video-info">
                         <h3>How To Trade Like A Casino</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 23, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>A Simple Momentum Trading Strategy (Backed By Data)</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">26 minutes ago</div>
+                            <div class="date">33 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -6099,7 +6099,7 @@
                         <div class="video-info">
                             <h3>How To Trade Like A Casino</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 23, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>The Power of Stillness, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
