--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>From Suffering To Awakening | Eckhart Tolle on Awakening Through Life's Challenges (Part 1)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">9 minutes ago</div>
+                        <div class="date">33 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Pizza testing #pizza #pizzalover #food #streetfood #pizzatime</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">56 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>The Power of Stillness, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Vikkstar’s COLDEST Moment 🥶</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2327,7 +2327,7 @@
                     <div class="video-info">
                         <h3>FIX THIS FIRST and your entire swing falls in place (most never realize this)</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 23, 2025</div>
                     </div>
                 </a>
             </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>From Suffering To Awakening | Eckhart Tolle on Awakening Through Life's Challenges (Part 1)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">9 minutes ago</div>
+                            <div class="date">33 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7282,7 +7282,7 @@
                         <div class="video-info">
                             <h3>The Power of Stillness, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>Pizza testing #pizza #pizzalover #food #streetfood #pizzatime</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">56 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9467,7 +9467,7 @@
                         <div class="video-info">
                             <h3>FIX THIS FIRST and your entire swing falls in place (most never realize this)</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 23, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>Vikkstar’s COLDEST Moment 🥶</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
