--- a/index.html
+++ b/index.html
@@ -2316,7 +2316,7 @@
                     <div class="video-info">
                         <h3>Vikkstar, Tobi & Behz on GUMBALL Rally</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 23, 2025</div>
                     </div>
                 </a>
             </div>
@@ -9825,7 +9825,7 @@
                         <div class="video-info">
                             <h3>Vikkstar, Tobi & Behz on GUMBALL Rally</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 23, 2025</div>
                         </div>
                     </a>
                 </div>
