--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>There is No Need to be Perfect |Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">42 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Pizza testing #pizza #pizzalover #food #streetfood #pizzatime</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -871,7 +871,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 16.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5358,7 +5358,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 16.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>There is No Need to be Perfect |Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">42 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8746,7 +8746,7 @@
                         <div class="video-info">
                             <h3>Pizza testing #pizza #pizzalover #food #streetfood #pizzatime</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
